--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
+    "tailwind": "^3.0.0",
     "tailwindcss": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
