--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
     "@tailwindcss/postcss": "^4.0.1",
+    "autoprefixer": "^10.x.x",
     "express": "^4.18.2",
     "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
     "tailwind": "^3.0.0",
     "tailwindcss": "^3.0.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "autoprefixer": "^10.x.x"
-
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.11",
