--- a/package.json
+++ b/package.json
@@ -22,12 +22,9 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
     "@tailwindcss/postcss": "^4.0.1",
-    "autoprefixer": "^10.x.x",
     "express": "^4.18.2",
-    "postcss": "^8.5.1",
     "rxjs": "~7.8.0",
     "tailwind": "^3.0.0",
-    "tailwindcss": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -38,12 +35,15 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3",
     "typescript": "~5.4.2"
   }
 }
