--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
     "@tailwindcss/postcss": "^4.0.1",
+    "amqplib": "^0.10.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tailwind": "^3.0.0",
