--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
+    "@tailwindcss/postcss": "^4.0.3",
     "amqplib": "^0.10.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tailwind": "^3.0.0",
+    "tailwindcss": "^4.0.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
